--- a/ft_transendence/sign_in.css
+++ b/ft_transendence/sign_in.css
@@ -6,35 +6,44 @@ body {
 	background: linear-gradient(135deg, #153050, #3bb1f4, #153050, #153050, #153050, #3bb1f4, #153050);
 	height: 100vh;
 	margin: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: center; /* vertical */
-	align-items: center; /* horizontal */
 	font-family: 'Roboto', sans-serif;
 }
 
-.back-arrow {
-  font-size: 70px;  /* Size of the arrow */
-  color: azure;      /* Arrow color */
-  position: fixed;  /* Fixed position */
-  top: 0px;        
-  left: 40px;       /* Distance from left */
-  text-decoration: none; /* Remove underline */
-  background: none; /* Optional background for visibility */
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer; /* Show pointer on hover */
+#header-div {
+	width: 100%;
+	height: 5rem;
+	position: fixed;
+	min-height: 5rem;
 }
 
-#arrow-back {
-	height: 50px;
-	width: 65px;
-	filter: invert(1) brightness(100%);
+header {
+	display: flex;
+	justify-content: left; /* horizontal */
+	align-items: end; /* vertical */
+	width: 100%;
+	height: 100%;
+	padding-left: 3rem;
 }
 
+#arrow-back-img {
+	width: 2vw;
+  min-width: 1.7rem;
+	filter: invert(1) brightness(95%);
+}
+
+#body-div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	width: 100%;
+}
 
 form {
 	width:20%;
+	padding: 0 2rem;
+	min-width: 25rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -42,62 +51,69 @@ form {
 
 h1 {
 	color: aliceblue;
+	margin-top: 0;
 	text-align: center;
-	font-size: 2.5em;
+	font-size: 2.5rem;
 }
 
 input {
-	margin-top: 14px;
+	margin-top: 0.8rem;
 	width: 100%;
-	height: 90px;
-	border-radius: 20px;
+	height: 5rem;
+	border-radius: 1.5rem;
 	border: none;
-	background-color: #E0E0E0;
+	background-color: aliceblue;
 }
 
-a {
+#forgot-password {
 	align-self: flex-end;
-	margin: 0.3em 0.5em 0.5em 0;
+	margin: 0.3rem 0.5rem 0.5rem 0;
 	color: #ff6aae;
+	font-size: 1.1rem;
 }
 
 input[type="submit"] {
-	font-size: larger;
+	font-size: 1.4rem;
 	font-weight: bold;
 	cursor: pointer;
 	background-color: #3bb1f4;
 	color: aliceblue;
 }
 
+#register-here {
+	color: #ff6aae;
+	font-size: 1.1rem;
+}
+
 input::placeholder {
 	color: #153050;
-	font-size: larger;
+	font-size: 1.2rem;
 }
 
 .infos {
-	font-size: large;
-	padding-left: 1em;
+	font-size: 1.2rem;
+	padding-left: 1rem;
 }
 
 p {
 	color: aliceblue;
-	font-size: large;
+	font-size: 1.1rem;
 }
 
 .line-with-text {
 	display: flex;
 	align-items: center;
 	width: 22%;
+	min-width: 27rem;
 }
 
 .line-with-text::before,
 .line-with-text::after {
 	content: "";
 	flex: 1;
-	height: 0.3em;
-	min-width: 25%;
-	background-color: white;
-	margin: 0 2em;
+	height: 0.3rem;
+	background-color: aliceblue;
+	margin: 0 2rem;
 }
 
 span {
@@ -106,15 +122,18 @@ span {
 }
 
 button {
-	margin-top: 20px;
-	height: 70px;
-	width: 8%;
+	margin-top: 1.5rem;
+	height: 5rem;
+	min-height: 5rem;
+	width: 10rem;
+	min-width: 8rem;
 	border-radius: 20px;
 	border: none;
 	cursor: pointer;
 	font-size: larger;
 	font-weight: bold;
 	color: #153050;
-	background-color: #E0E0E0;
+	background-color: aliceblue;
 }
-  
+
+/* 3ml background d lheader ki5tafi ida tala3ti body morah  */
